[tool.poetry]
name = "dragon"
version = "0.0.0"
description = ""
authors = ["straydragon <straydragonl@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
munch = "^2.5.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-mock = "^1.13.0"
pytest-cov = "^2.8.1"
isort = "^4.3.21"
ipython = "^7.11.1"
"ruamel.yaml" = "^0.16.5"
pyyaml = "^5.3"
flake8 = "^3.7.9"
yapf = "^0.29.0"
mypy = "^0.761"
bump2version = "^1.0.0"

[tool.poetry.scripts]
dragon = 'dragon.entry:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
