[tool.poetry]
name = "tweedle"
version = "0.0.2"
description = "A CLI tool for manage appconfigs and archive data"
authors = ["straydragon <straydragonl@foxmail.com>"]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/StrayDragon/tweedle"
homepage = "https://github.com/StrayDragon/tweedle"
keywords=["Commandline tools", "Configs and data management"]
# see https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: OS Independent",
    # "Programming Language :: Python :: 3.6",
    # "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
# see https://python-poetry.org/docs/pyproject/#packages
packages = [
    { include = "tweedle" },
]

# see https://python-poetry.org/docs/pyproject/#include-and-exclude
include =  [
    "stubs/*.toml", # `tweedle backup` needed this data
    # "scripts/*",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
python-box = "4.2.0"
toml = "^0.10.0"
inquirer = "^2.6.3"
attrs = "^19.3.0"
click-plugins = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-mock = "^1.13.0"
pytest-cov = "^2.8.1"
pytest-mypy = "^0.4.2"
pytest-flake8 = "^1.0.4"
flake8 = "^3.7.9"
flake8-import-order = "^0.18.1"
mypy = "^0.761"
yapf = "^0.29.0"
isort = "^4.3.21"
rope = "^0.16.0"
tox = "^3.14.5"
bump2version = "^1.0.0"
pre-commit = "^2.1.0"
# ipython = "^7.11.1"
# q = "*"
# ipdb = "*"
# "ruamel.yaml" = "^0.16.5"
# pyyaml = "^5.3"
# https://github.com/cool-RR/pysnooper
pysnooper = "^0.3.0"

[tool.poetry.scripts]
tweedle = 'tweedle.entry:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
